# camera-playground

./: .gitignore  CMakeLists.txt  CMakePrestes.json  README.md  build.gradle  compile_commands.json  local.properties
basic/: build.gradle
basic/src/main/java/com/sample/camera/basic/: CameraActivity.java
basic/src/main/res/values/: strings.xml
cmake/devices/: x86_64-API29.json
common/utils/: camera_utils.cpp
texture-view/: build.gradle
texture-view/src/main/cpp/: CMakeLists.txt  camera_engine.cpp  camera_manager.h
texture-view/src/main/java/com/sample/textureview/: ViewActivity.java
texture-view/src/main/res/values/: strings.xml
